syntax = "proto3";

package sample;

message Created {
    string data_id = 1;
}

message Updated {
    string data_id = 1;
    int32 value = 2;
}

message DataEvent {
    string event_id = 1;

    oneof event {
        Created created = 2;
        Updated updated = 3;
    }
}
